Connected javascript file

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <br>
     <br>
     <h4 style="text-align: center;""><strong>Commit your code to your own repository then send us the link to the repository</strong></h4>
+    <script src="main.js"></script>
 </body>
 </html>
